fix share modal dialog to be more readable

--- a/dark.css
+++ b/dark.css
@@ -8958,3 +8958,38 @@ span.c-message__sender.c-message_kit__sender {
 .p-file_details__share_channel, .p-file_details__name {
     color: inherit;
 }
+
+.c-alert--inline, .c-texty_input .ql-placeholder {
+    color: #a1a1a1;
+}
+
+.c-alert--level_warning {
+    background-color: #333;
+    border: 1px solid #a1a1a1;
+}
+
+.c-message_attachment__author_name {
+    color: #a1a1a1 !important;
+}
+
+.c-dialog__content {
+    background: #222;
+}
+
+.c-texty_input.c-texty_input--use_focus_ring.focus {
+    box-shadow: 0 0 0 1px #333, 0 0 0 5px #333;
+}
+
+.c-dialog_speed_bump_overlay {
+    background: hsla(0,0%,13.33%,.7);
+}
+
+.c-dialog_speed_bump {
+    background-color: #222;
+    border-top: 1px solid #444;
+}
+
+.c-dialog_speed_bump__button_row .c-button--outline {
+    background: #424242;
+    color: #a1a1a1;
+}
